--- a/examples/sample1.yml
+++ b/examples/sample1.yml
@@ -1,5 +1,5 @@
 ---
-# Example from: http://www.yaml.org/start.html
+# Modified example from: http://www.yaml.org/start.html
 invoice: 34843
 date   : 2001-01-23
 bill-to: &id001
@@ -22,6 +22,10 @@ product:
       quantity    : 1
       description : Super Hoop
       price       : 2392.00
+labels:
+  - premium customer
+  - online order
+  - fast delivery
 tax  : 251.42
 total: 4443.52
 comments: >
