Initial support for aliases and comments
Yamlpal now does a better job at parsing aliases (i.e. values starting
with '*') and comments (i.e. values starting with a '>') by more
accurately determining the start and end line of these data types.

--- a/examples/sample1.yml
+++ b/examples/sample1.yml
@@ -27,6 +27,7 @@ labels:
   - online order
   - fast delivery
 tax  : 251.42
+title: Invoice for purchases
 total: 4443.52
 comments: >
     Late afternoon is best.
