--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: python
-python:
-  - "2.7"
+# Enable 3.7 without globally enabling sudo and dist: xenial for other build jobs
+matrix:
+  include:
+    - python: 2.7
+      dist: xenial
+    - python: 3.7
+      dist: xenial
+      sudo: true
 install:
   - "pip install -r requirements.txt"
   - "pip install -r test-requirements.txt"
